#                                                                              #
#                ===== PLEASE DO NOT DELETE THIS HEADER ====                   #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789

JG-2011-03-23-1: Cleanup:     removed the reporting code (Web-Console)
                 Issue:       AR-1
                 Review:      DG

JG-2011-03-23-0: Bugfix:      fixed the build with current versions of tools
                              (Java, ant, jaxb, removed dependency to jwsdp)
                 Cleanup:     removed old review directory
                 Issue:       AR-2
                 Review:      DG

mD-2009-12-11-0: CVS:		Created V62u5_TAG
-------------------------------------------------------
MD-2009-12-09-0: CVS:		Created V62u5RC2_TAG
-------------------------------------------------------
MD-2009-12-02-1: CVS:		Created V62u5RC1_TAG
-------------------------------------------------------

MD-2009-12-01-0: Enhancem:    checkin version file

LP-2009-11-27-0: Bugfix:      dbwriter.conf can not be read during upgrading
                              dbwriter
                 Bugster:     6902920
                 Issue:       3187
                 Bugfix:      dbwriter installer shows error message if SGE_ROOT
                              is not set
                 Bugster:     6902923
                 Issue:       3187
                 Review:      MD

SH-2009-11-25-0: Bugfix:      Fixed TestParsing.java junit test
                 Review:      CR

MD-2009-11-19-0: CVS:		Created V62u5beta2_TAG
-------------------------------------------------------
MD-2009-11-17-0: CVS:		Created V62u5beta1_TAG
-------------------------------------------------------
MD-2009-11-09-0: CVS:		Created V62u5alpha2_TAG
-------------------------------------------------------
