@@ -8,6 +8,9 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 
+JG-2011-03-29-0: Cleanup:     minor code cleanup and fix to compiling the JUnit
+                              tests.
+
 JG-2011-03-23-1: Cleanup:     removed the reporting code (Web-Console)
                  Issue:       AR-1
                  Review:      DG
